samples/_failures_safe/1761188078_30b9be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb565970.c: In function ‘main’:
./samples/SAFE/__tmp_fb565970.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
